--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="fr">
-
+	
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="Panthère, seo, google, site web, internet, agence, web design, Lyon, stratégie, illustration">
@@ -83,9 +83,11 @@
 <div class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
 		<div class="row">
-			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.webp" title="description_agence">
-			</div>
+			<<div>
+				<h2 class="text-center ">
+					L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.
+				</h2>
+	</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
@@ -122,12 +124,10 @@
 				</p>
 			</div>
 		</div>
-		<div class="row voffset-lg voffset">
-			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.webp">
-
-			</div>
-		</div>
+	<div>
+				<p class="text-center ">
+					"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capture l'essence de notre entreprise et à intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à lyon." Maxime Guibard, PDG de À vos fourchettes
+				</p>
 	</div>
 </div>
 <!-- bloc-2-services END -->
@@ -152,11 +152,11 @@
 <!-- bloc-4-portfolio -->
 <div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg">
-		<div class="row">
-			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.webp">
-			</div>
-		</div>
+			<div>
+				<h4 class="text-center ">
+					Nous travaillons avec beaucoup de clients, voici nos réalisations.
+				</h4>
+	</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb"></a>
