--- a/html/contact.html
+++ b/html/contact.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="fr">
 	<head>
-		<meta name="robots" content="contact,follow"/>
+		<meta name="robots" content="contact,follow">
 		<meta charset="utf-8">
 		<meta name="keywords" content="Panthère, communication, google, site web, internet, agence, web design, Lyon">
 		<meta name="description" content="La Panthère, agence de webdesign à Lyon">
