--- a/index.html
+++ b/index.html
@@ -20,25 +20,26 @@
 	</head>
 	<body>
 		<div class="page-container">
-			<div class="bloc bgc-white l-bloc " id="bloc-0">
+			<div class="bloc bgc-white l-bloc" id="bloc-0">
 				<div class="container bloc-sm">
-					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="paris web design logo agence web meilleure agence" height="40"></a>
-						<nav class="navbar row"></nav>
-						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-					</div>
-					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-						<ul class="site-navigation nav navbar-nav">
-							<li><a href="index.html">Accueil</a></li>
-							<li></li>
-							<li><a href="html/contact.html">Contact</a></li>
-						</ul>
-					</div>
+					<nav class="navbar row">
+						<div class="navbar-header">
+							<a class="navbar-brand" href="./index.html"><img src="./img/agence-la-panthere-monochrome.webp" alt="logo de l'agence La panthère" height="40"></a>
+							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+						</div>
+						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+							<ul class="site-navigation nav navbar-nav">
+								<li><a href="../index.html">Accueil</a></li>
+								<li></li>
+								<li><a href="./html/contact.html">Contact</a></li>
+							</ul>
+						</div>
+					</nav>
 				</div>
 			</div>
 			<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
@@ -104,7 +105,7 @@
 						<div class="col-sm-12">
 							<h3 class="mg-md text-center tc-white">Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br></h3>
 							<p class="text-center white">
-								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. 
+								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.
 								<br>
 								<br>
 								<a class="ltc-white bold-link" href="./html/contact.html">Contactez notre équipe</a>
